--- a/materials/min_kr3/main.tex
+++ b/materials/min_kr3/main.tex
@@ -107,8 +107,8 @@
   \item Дайте определение распределения Фишера. Укажите диапазон возможных значений, выражение через нормальные распределенеия. Нарисуйте возможную функцию плотности.
 \end{enumerate}
 
-Для следующего блока вопросов предполагается, что 
-имеется случайная выборка $X_1$, $X_2$, \ldots, $X_n$ из распределения 
+Для следующего блока вопросов предполагается, что
+имеется случайная выборка $X_1$, $X_2$, \ldots, $X_n$ из распределения
 с функцией плотности $f(x, \theta)$, зависящей от от параметра $\theta$. Дайте определение каждого понятия из списка или сформулируйте соответствующую теорему:
 
 \begin{enumerate}[resume]
@@ -142,7 +142,7 @@
 \item Рост в сантиметрах (случайная величина $X$) и вес в килограммах (случайная величина $Y$) взрослого мужчины является нормальным случайным вектором $Z = (X, Y)$ с математическим ожиданием $\E(Z) = (175, 74)$ и ковариационной матрицей
 
 \[
-\Var(Z) = 
+\Var(Z) =
 \begin{pmatrix}
  49 & 28 \\
 28 & 36
@@ -160,7 +160,7 @@
 \item Рост в сантиметрах, случайная величина $X$, и вес в килограммах, случайная величина $Y$, взрослого мужчины является нормальным случайным вектором $Z = (X, Y)$ с математическим ожиданием $\E(Z) = (175, 74)$ и ковариационной матрицей
 
 \[
-\Var(Z) = 
+\Var(Z) =
 \begin{pmatrix}
  49 & 28 \\
 28 & 36
@@ -197,9 +197,9 @@
 \begin{center}
 \begin{tabular}{cccc}
 \toprule
- $x$ & $-3$  &$ 0 $  & $2 $  \\ 
+ $x$ & $-3$  &$ 0 $  & $2 $  \\
  \midrule
- $\P(X_i = x)$ & $2/3 - \theta$ & $1/3$ & $\theta$ \\ 
+ $\P(X_i = x)$ & $2/3 - \theta$ & $1/3$ & $\theta$ \\
  \bottomrule
 \end{tabular}
 \end{center}
@@ -214,8 +214,8 @@
 \item Пусть $X=(X_1, \ldots ,X_n)$ — случайная выборка из распределения с плотностью распределения
 
 \[
-f(x,\theta) = \begin{cases} 
-\dfrac{6x(\theta - x)}{\theta^3} & \text{при } x \in [0;\theta], \\ 
+f(x,\theta) = \begin{cases}
+\dfrac{6x(\theta - x)}{\theta^3} & \text{при } x \in [0;\theta], \\
 0 & \text{при } x \not\in [0;\theta],
 \end{cases}
 \]
@@ -225,7 +225,7 @@ f(x,\theta) = \begin{cases}
 
 \begin{enumerate}
 \item Является ли оценка $\hat{\theta} = \bar{X}$ несмещенной оценкой неизвестного параметра $\theta$?
-\item Подберите константу $c$ так, чтобы оценка $\tilde{\theta} = c\bar{X}$ оказалась несмещенной оценкой неизвестного параметра $\theta$. 
+\item Подберите константу $c$ так, чтобы оценка $\tilde{\theta} = c\bar{X}$ оказалась несмещенной оценкой неизвестного параметра $\theta$.
 \end{enumerate}
 
 \item Пусть $X = (X_1,X_2,X_3)$ — случайная выборка из распределения Бернулли с неизвестным параметром $p \in (0,1)$. Какие из следующих ниже оценкой являются несмещенными? Среди перечисленных ниже оценок найдите наиболее эффективную оценку:
@@ -236,23 +236,23 @@ f(x,\theta) = \begin{cases}
   \item $\hat{p}_3 = \frac{1}{3}X_1+\frac{1}{3}X_2+\frac{1}{3}X_3$.
 \end{itemize}
 
-\item Пусть $X=(X_1, \ldots,X_n)$ — случайная выборка из распределения с плотностью 
+\item Пусть $X=(X_1, \ldots,X_n)$ — случайная выборка из распределения с плотностью
 
 \[
-f(x,\theta) = 
-\begin{cases} 
-\frac{1}{\theta} \ e^{-\frac{x}{\theta}} & \text{при } x \geq 0, \\ 
-0 & \text{при } x < 0, 
+f(x,\theta) =
+\begin{cases}
+\frac{1}{\theta} \ e^{-\frac{x}{\theta}} & \text{при } x \geq 0, \\
+0 & \text{при } x < 0,
 \end{cases}
 \]
-где $\theta > 0$ — неизвестный параметр. 
+где $\theta > 0$ — неизвестный параметр.
 Является ли оценка  $\hat{\theta}_n = \dfrac{X_1+...+X_n}{n+1}$ состоятельной?
 
 \item Пусть $X=(X_1, \ldots ,X_n)$ — случайная выборка из распределения с плотностью распределения
 
 \[
-f(x,\theta) = \begin{cases} 
-\dfrac{6x(\theta-x)}{\theta^3} & \text{при } x \in [0;\theta], \\ 
+f(x,\theta) = \begin{cases}
+\dfrac{6x(\theta-x)}{\theta^3} & \text{при } x \in [0;\theta], \\
 0 & \text{при } x \not\in [0;\theta], \end{cases}
 \]
 
@@ -262,10 +262,10 @@ f(x,\theta) = \begin{cases}
 \item Пусть $X=(X_1, \ldots ,X_n)$ — случайная выборка из распределения с плотностью распределения
 
 \[
-f(x,\theta) = 
-\begin{cases} 
-\dfrac{6x(\theta-x)}{\theta^3} & \text{при } x \in [0;\theta], \\ 
-0 & \text{при } x \not\in [0;\theta], 
+f(x,\theta) =
+\begin{cases}
+\dfrac{6x(\theta-x)}{\theta^3} & \text{при } x \in [0;\theta], \\
+0 & \text{при } x \not\in [0;\theta],
 \end{cases}
 \]
 
@@ -277,9 +277,9 @@ f(x,\theta) =
 \begin{center}
 \begin{tabular}{cccc}
 \toprule
- $x$ & $-3$  &$ 0 $  & $2 $  \\ 
+ $x$ & $-3$  &$ 0 $  & $2 $  \\
  \midrule
- $\P(X_i = x)$ & $2/3 - \theta$ & $1/3$ & $\theta$ \\ 
+ $\P(X_i = x)$ & $2/3 - \theta$ & $1/3$ & $\theta$ \\
  \bottomrule
 \end{tabular}
 \end{center}
@@ -289,10 +289,10 @@ f(x,\theta) =
 \item Пусть $X=(X_1, \ldots,X_n)$ — случайная выборка из распределения с плотностью распределения
 
 \[
-f(x,\theta) = 
-\begin{cases} 
-\frac{2x}{\theta} \ e^{-\frac{x^2}{\theta}} & \text{при } x>0, \\ 
-0 & \text{при } x \leq 0, 
+f(x,\theta) =
+\begin{cases}
+\frac{2x}{\theta} \ e^{-\frac{x^2}{\theta}} & \text{при } x>0, \\
+0 & \text{при } x \leq 0,
 \end{cases}
 \]
 
@@ -303,9 +303,9 @@ f(x,\theta) =
 \item Пусть $X=(X_1, \ldots, X_n)$ — случайная выборка из распределения с плотностью
 
 \[
-f(x,\theta) = 
-\begin{cases} 
-\frac{1}{\theta} \ e^{-\frac{x}{\theta}} & \text{при } x \geq 0, \\ 
+f(x,\theta) =
+\begin{cases}
+\frac{1}{\theta} \ e^{-\frac{x}{\theta}} & \text{при } x \geq 0, \\
 0 & \text{при } x < 0, \end{cases}
 \]
 
@@ -316,12 +316,12 @@ f(x,\theta) =
 \begin{center}
 \begin{tabular}{cccc}
 \toprule
- Страта & $1$ & $2$ & $3$  \\ 
+ Страта & $1$ & $2$ & $3$  \\
  \midrule
- Среднее значение & $30$ & $40$ & $50$ \\ 
- Стандартная ошибка  & $5$ & $10$ & $20$ \\ 
- Вес & $25\%$ & $25\%$ & $50\%$ \\ 
- Цена наблюдения & $1$ & $5$ & $10$ \\ 
+ Среднее значение & $30$ & $40$ & $50$ \\
+ Стандартная ошибка  & $5$ & $10$ & $20$ \\
+ Вес & $25\%$ & $25\%$ & $50\%$ \\
+ Цена наблюдения & $1$ & $5$ & $10$ \\
  \bottomrule
 \end{tabular}
 \end{center}
@@ -331,13 +331,13 @@ f(x,\theta) =
 Ответы:
 
 \begin{enumerate}
-\item 
+\item
 \begin{enumerate}
 \item $\approx 0.15$
 \item $U \sim \cN(101,29)$, $f(u) = \frac{1}{\sqrt{2\pi\cdot 29}}e^{-\frac{1}{2}\frac{(u-101)^2}{29}}$
 \item $\approx 0.02$
 \end{enumerate}
-\item 
+\item
 \begin{enumerate}
 \item $71.14$
 \item $f(y|x=170) = \frac{1}{\sqrt{2\pi\cdot20}}e^{-\frac{1}{2}\frac{(y-71.14)^2}{20}}$
@@ -363,25 +363,25 @@ f(x,\theta) =
 1, & x \geq 1
 \end{cases}$
 \end{enumerate}
-\item 
+\item
 \begin{enumerate}
 \item $\theta$
 \item да
 \end{enumerate}
 
-\item 
+\item
 \begin{enumerate}
 \item нет, оценка смещена
-\item $c = 2$ 	
+\item $c = 2$
 \end{enumerate}
-\item 
+\item
 \begin{enumerate}
 \item все оценки несмещенные
 \item $\hat{p}_3$ наиболее эффективная
-\end{enumerate}	
+\end{enumerate}
 \item да
 \item да
-\item $\hat{\theta}_{MM} = \sqrt{\frac{\sum_{i=1}^n(X-X_{i})^2\cdot20}{n}}$
+\item $\hat{\theta}_{MM} = \sqrt{\frac{\sum_{i=1}^n(X_i-\overline{X})^2\cdot20}{n}}$
 
 \item $\hat{\theta}_{MM} = \frac{1}{5}\left(6 - \frac{1}{n}\sum_{i=1}^n X_i^2 \right)$, $\hat{\theta}_{MM} = 0.68$
 \item $\hat{\theta}_{ML} = \frac{\sum_{i=1}^n x_i^2}{n}$
