--- a/materials/min_kr4/main.tex
+++ b/materials/min_kr4/main.tex
@@ -139,4 +139,126 @@
 
 
 
+\begin{enumerate}
+
+\item Пусть $X = (X_{1},..., X_{n})$  — случайная выборка из нормального
+распределения с параметрами $\mu$ и ${\sigma}^2 = 4$. Используя реализацию случайной выборки, $x_{1} = -1.11$, $x_{2} = -6.10$, $x_{3} =  2.42$, постройте 90\%-ый доверительный интервал для неизвестного параметра $\mu$.
+
+\item Пусть $X = (X_{1},..., X_{n})$ — случайная выборка из нормального распределения с неизвестными параметрами $\mu$ и ${\sigma}^2$. Используя реализацию случайной выборки, $x_{1} = -1.11$, $x_{2} = -6.10$, $x_{3} = 2.42$, постройте 90\%-ый доверительный интервал для неизвестного параметра $\mu$.
+
+\item Пусть $X = (X_{1},..., X_{n})$ — случайная выборка из нормального распределения с неизвестными параметрами $\mu$ и ${\sigma}^2$. Используя реализацию случайной выборки, $x_{1} = 1.07$, $x_{2} = 3.66$, $x_{3} = -4.51$, постройте 80\%-ый доверительный интервал для неизвестного параметра ${\sigma}^2$.
+
+\item Пусть $X = (X_{1},..., X_{n})$ и $Y = (Y_{1},..., Y_{m})$ — независимые случайные выборки из нормального распределения с параметрами $(\mu_{X},{\sigma^2_{X}})$ и $(\mu_{Y},{\sigma^2_{Y}})$ соответственно, причем $\sigma^2_{X} = 2$ и $\sigma^2_{Y} = 1$. Используя реализации случайных выборок\newline
+\hspace*{3cm}$x_{1} = -1.11, x_{2} = -6.10, x_{3} = 2.42, y_{1} = -2.29, y_{2} = -2.91$,\newline постройте 95\%-ый доверительный интервал для разности математических ожиданий $\mu_{X} - \mu_{Y}$.
+
+\item Пусть $X = (X_{1},..., X_{n})$ и $Y = (Y_{1},..., Y_{m})$— независимые случайные выборки из нормального распределения с параметрами $(\mu_{X},{\sigma^2_{X}})$ и $(\mu_{Y},{\sigma^2_{Y}})$ соответственно. Известно, что $\sigma^2_{X} = \sigma^2_{Y}$. Используя реализации случайных выборок\newline
+\hspace*{3cm}$x_{1} = 1.53, x_{2} = 2.83, x_{3} = -1.25, y_{1} = -0.8, y_{2} = 0.06$,\newline постройте 95\%-ый доверительный интервал для разности математических ожиданий $\mu_{X} - \mu_{Y}$.
+
+\item Пусть $X = (X_{1},..., X_{n})$ — случайная выборка из распределения Бернулли с параметром $p$. Используя реализацию случайной выборки $x = (x_{1},..., x_{n})$, в которой 55 нулей и 45 единиц, постройте приближенный 95\%-ый доверительный интервал для неизвестного параметра $p$.
+
+\item Пусть $X = (X_{1},..., X_{n})$ и $Y = (Y_{1},..., Y_{m})$ — независимые случайные
+выборки из распределения Бернулли с параметрами $p_{X} \in (0;1)$ и $p_{Y} \in (0;1)$ соответственно. Известно, что $n = 100$, $\bar{x}_{n} = 0.6$, $m = 200$, $\bar{y}_{m} = 0.4$. Постройте приближенный 95\%-ый доверительный интервал для отношения разности вероятностей успеха $p_{X} - p_{Y}$.
+
+\item Дядя Вова (Владимир Николаевич) и Скрипач (Гедеван) зарабатывают на Плюке чатлы, чтобы купить гравицапу. Число заработанных за $i$-ый день чатлов имеет распределение Пуассона с неизвестным параметром $\lambda$. Заработки в различные дни независимы. За прошедшие 100 дней они заработали 250 чатлов. 
+
+С помощью метода максимального правдоподобия постройте приближенный 95\%-ый доверительный интервал для неизвестного параметра $\lambda$.
+
+\item Пусть $X = (X_{1},..., X_{n})$ — случайная выборка из показательного (экспоненциального) распределения с плотностью распределения
+\[
+f(x,\lambda)=
+\begin{cases}
+\lambda e^{-\lambda x}\text{ при } x\geq 0 \\
+0 \text{ при } x < 0 \\
+\end{cases}
+\]
+где $\lambda > 0$ — неизвестный параметр распределения. Известно, что $n = 100$ и $\bar{x}_n = 0.52$. 
+
+С помощью метода максимального правдоподобия постройте приближенный 95\%-ый доверительный интервал для параметра $\lambda$.
+
+\item Пусть $X = (X_{1},..., X_{n})$  — случайная выборка из равномерного распределения на отрезке $[0; \theta]$, где  $\theta > 0$ — неизвестный параметр распределения. Известно, что $n = 100$ и $\bar{x}_n = 0.57$. 
+
+С помощью метода максимального правдоподобия постройте приближенный 95\%-ый доверительный интервал для параметра $\theta$.
+
+\item Пусть $X = (X_{1},..., X_{n})$ — случайная выборка из нормального распределения с неизвестным математическим ожиданием $\mu$ и известной дисперсией $\sigma^2 = 4$. Объем выборки $n = 16$. Для тестирования основной гипотезы $H_{0}:\mu = 0$ против
+альтернативной гипотезы $H_{1}:\mu = 2$ вы используете критерий: если $\bar{X} \leq 1$, то вы принимаете гипотезу $H_{0}$ , в противном случае вы отвергаете гипотезу $H_{0}$ в пользу гипотезы $H_{1}$. Найдите
+
+\hspace*{0.6cm}(a) вероятность ошибки 1-го рода, 
+
+\hspace*{0.6cm}(b) вероятность ошибки 2-го рода,
+
+\hspace*{0.6cm}(c) мощность критерия.
+
+\item На основе случайной выборки, содержащей одно наблюдение $X_{1}$, тестируется гипотеза $H_{0} : X_{1} \sim U[-0.7;0.3]$ против альтернативной гипотезы $H_{1}: X_{1} \sim U[-0.3;0.7]$. Рассматривается критерий вида: если $X_{1} > c$ , то гипотеза $H_{0}$ отвергается в пользу гипотезы $H_{1}$. Выберите константу $c$ так, чтобы уровень значимости этого критерия составлял 0.1.
+
+\item Пусть $X = (X_{1},..., X_{n})$ — случайная выборка из нормального распределения с параметрами $\mu$ и $\sigma^2 = 4$. Уровень значимости  $\alpha = 0.1$. Используя
+реализацию случайной выборки $x_{1} = -1.11, x_{2} = -6.10, x_{3} = 2.42$, проверьте следующую гипотезу:$\begin{cases}
+H_{0}:\mu = 0, \\
+H_{1}:\mu > 0 \\
+\end{cases}$
+
+\item Пусть $X = (X_{1},..., X_{n})$ — случайная выборка из нормального распределения с параметрами $\mu$ и $\sigma^2$. Уровень значимости  $\alpha = 0.1$. Используя
+реализацию случайной выборки $x_{1} = -1.11, x_{2} = -6.10, x_{3} = 2.42$, проверьте следующую гипотезу:$\begin{cases}
+H_{0}:\mu = 0, \\
+H_{1}:\mu > 0 \\
+\end{cases}$
+
+\item Пусть $X = (X_{1},..., X_{n})$ и $Y = (Y_{1},..., Y_{m})$ — независимые случайные
+выборки из нормального распределения с параметрами $(\mu_{X},\sigma^2_{X})$ и $(\mu_{Y},\sigma^2_{Y})$ соответственно, причем  $\sigma^2_{X} = 2$ и $\sigma^2_{Y} = 1$. Уровень значимости $\alpha = 0.05$. Используя реализации случайных выборок\newline
+\hspace*{3cm}$x_{1} = -1.11, x_{2} = -6.10, x_{3} = 2.42, y_{1} = -2.29, y_{2} = -2.91$,
+
+проверьте следующую гипотезу:$\begin{cases}
+H_{0}:\mu_{X} = \mu_{Y}, \\
+H_{1}:\mu_{X} < \mu_{Y} \\
+\end{cases}$
+
+\item Пусть $X = (X_{1},..., X_{n})$ и $Y = (Y_{1},..., Y_{m})$ — независимые случайные
+выборки из нормального распределения с параметрами $(\mu_{X},\sigma^2_{X})$ и $(\mu_{Y},\sigma^2_{Y})$ соответственно. Известно, что $\sigma^2_{X} = \sigma^2_{Y}$. Уровень значимости $\alpha = 0.05$. Используя реализации случайных выборок\newline
+\hspace*{3cm}$x_{1} = 1.53, x_{2} = 2.83, x_{3} = -1.25, y_{1} = -0.8, y_{2} = 0.06$,
+
+проверьте следующую гипотезу:$\begin{cases}
+H_{0}:\mu_{X} = \mu_{Y}, \\
+H_{1}:\mu_{X} < \mu_{Y} \\
+\end{cases}$
+
+
+\item Пусть $X = (X_{1},..., X_{n})$ и $Y = (Y_{1},..., Y_{m})$ — независимые случайные
+выборки из нормального распределения с параметрами $(\mu_{X},\sigma^2_{X})$ и $(\mu_{Y},\sigma^2_{Y})$ соответственно. Уровень значимости $\alpha = 0.05$. Используя реализации случайных выборок\newline
+\hspace*{3cm}$x_{1} = -1.11, x_{2} = -6.10, x_{3} = 2.42, y_{1} = -2.29, y_{2} = -2.91$,
+
+проверьте следующую гипотезу:$\begin{cases}
+H_{0}:\sigma^2_{X} = \sigma^2_{Y}, \\
+H_{1}:\sigma^2_{X} > \sigma^2_{Y} \\
+\end{cases}$
+
+\item Пусть  $X = (X_{1},..., X_{n})$ — случайная выборка из распределения Бернулли с
+неизвестным параметром $p \in (0;1)$.Имеется следующая информация о реализации
+случайной выборки, содержащей $n = 100$ наблюдений: $\sum_{i=0}^{n} x_{i} = 60$. На уровне значимости $\alpha = 0.05$ требуется протестировать следующую гипотезу:$\begin{cases}
+H_{0}:p = 0.5, \\
+H_{1}:p > 0.5 \\
+\end{cases}$
+
+\item Пусть $X = (X_{1},..., X_{n})$ и $Y = (Y_{1},..., Y_{m})$-две независимые случайные выборки из распределения Бернулли с неизвестными параметрами $p_{X} \in (0; 1)$ и $p_{Y} \in (0; 1)$. Имеется следующая информация о реализациях этих случайных выборок: $n = 100$, $\sum_{i=1}^{n} x_{i} = 60$, $m = 150$,$\sum_{j=1}^{m} y_{j} = 50$. На уровне значимости $\alpha = 0.05$ требуется протестировать следующую гипотезу: $\begin{cases}
+H_{0}:p_{X} = p_{Y}, \\
+H_{1}:p_{X} \neq p_{Y} \\
+\end{cases}$
+
+\item Вася Сидоров утверждает, что ходит в кино в два раза чаще, чем в спортзал, а в спортзал в два раза чаще, чем в театр. За последние полгода он 10 раз был в театре, 17 раз – в спортзале и 39 раз в кино. На уровне значимости 5\% проверьте утверждение Васи.
+
+\item Вася очень любит тестировать статистические гипотезы. В этот раз Вася собирается проверить утверждение о том, что его друг Пётр звонит Васе исключительно в то время, когда Вася ест. Для этого Вася трудился целый год и провел серию из 365 испытаний. Результаты приведены в таблице ниже.
+\begin{center}\begin{tabular}{r|rr}
+\toprule
+   & Пётр звонит   & Пётр не звонит  \\ \midrule
+Вася ест           & $200$ & $40$ \\ 
+ Вася не ест       & $25$ & $100$  \\ \bottomrule
+\end{tabular}\end{center}
+На уровне значимости 5\% протестируйте гипотезу о том, что Пётр звонит Васе
+независимо от момента приема пищи Васей.
+
+\item Пусть $X = (X_{1},..., X_{n})$ — случайная выборка из нормального распределения
+с математическим ожиданием $\mu \in \mathbb{R}$ и дисперсией $v > 0$, где $\mu$ и $v$ — неизвестные параметры. Известно, что выборка состоит из $n = 100$ наблюдений, $\sum_{i=1}^{n} x_{i} = 30$, $\sum_{i=1}^{n} x^2_{i} = 146$. При помощи теста отношения правдоподобия протестируйте гипотезу $H_{0}:v = 1$ на уровне значимости 5\%.
+
+
+
+\end{enumerate}
+
 \end{document}
